# fred_simulations

./: .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  BUILD  CHANGELOG.md  CLAUDE.md  EpistemixConfigurationReadPolicy.json  EpistemixInfrastructureCreatePolicy.json  Makefile  PHASE1_DESIGN_SMELLS.md  PHASE2_CRITICAL_ANALYSIS.md  PHASE2_ISSUE.md  PHASE3_DESIGN_PLAN.md  PHASE3_JOBS3PREFIX_ANALYSIS.md  README.md  analyze_results.py  docker-compose.yml  epistemix  epx-requirements.txt  fred_cli_demo.sh  main.cpp  pants.toml  pyproject.toml  run_epistemix_api.sh  run_fred_simulation.sh  run_info_job.py  run_info_job_debug.py  simulation  tcr.yaml  test_cli_setup.py  test_epistemix_api.db  test_poetry_setup.py
epistemix_platform/: .env.example  BUILD  CHANGELOG.md  README.md  SERVICES_ANALYSIS.md  alembic.ini  app.py  generate_token.py  pyproject.toml  run_server.py  setup.py
epistemix_platform/configs/: gunicorn.conf.py  nginx.conf
epistemix_platform/controllers/: BUILD  __init__.py  job_controller.py
epistemix_platform/infrastructure/: .cfnlintrc.yaml  BUILD  CHANGELOG.md  DEPENDENCY_ISSUE.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PR37_CODERABBIT_TODOS.md  README.md  pyproject.toml  s3-upload-bucket.yml
epistemix_platform/infrastructure/config/: BUILD  batch-vpc-endpoint.yaml  config.yaml
epistemix_platform/infrastructure/docs/: API_GATEWAY_LAMBDA_DEPLOYMENT.md  ARCHITECTURAL_DECISIONS.md  DEPLOYMENT_CHECKLIST.md  EpistemixRDSDeploymentPolicy-v4.json  RDS_SECURITY.md
epistemix_platform/infrastructure/guard_rules/: README.md  api_gateway_security_rules.guard  ec2_security_rules.guard  ecr_security_rules.guard  lambda_security_rules.guard  rds_security_rules.guard  s3_security_rules.guard  ssm_security_rules.guard
epistemix_platform/infrastructure/hooks/: BUILD  run_tests.py  validate_templates.py
epistemix_platform/infrastructure/scripts/: install-cfn-guard.sh  run-cfn-nag.sh
epistemix_platform/infrastructure/templates/: BUILD
epistemix_platform/infrastructure/tests/: BUILD  conftest.py  pytest.ini  test_environment_configs.py  test_iam_resources.py  test_parameter_resolution.py  test_resource_tags.py  test_stack_configs.py  test_template_security.py  test_template_syntax.py
epistemix_platform/mappers/: BUILD  __init__.py  job_mapper.py
epistemix_platform/migrations/: env.py
epistemix_platform/migrations/versions/: 001_initial_migration.py  002_add_results_fields_to_runs.py
epistemix_platform/models/: BUILD  job.py  upload_content.py
epistemix_platform/pacts/: epx-epistemix.json
epistemix_platform/repositories/: BUILD  run_repository.py  s3_upload_location_repository.py
epistemix_platform/scripts/: docker-entrypoint.sh  migration-entrypoint.sh  run-simulation.sh
epistemix_platform/src/epistemix_platform/: BUILD  __init__.py  app.py  bootstrap.py  cli.env.example  cli.py  config.py  exceptions.py  wsgi.py
epistemix_platform/tests/: BUILD  conftest.py  pyproject.toml  test_app_routes.py  test_bootstrap.py  test_fred_job_submission.py  test_job_results_endpoint.py  test_pact_compliance.py
epistemix_platform/tests/controllers/: test_job_controller.py  test_job_controller_download.py  test_job_controller_integration.py
epistemix_platform/tests/gateways/: BUILD  __init__.py  test_simulation_runner.py
epistemix_platform/tests/integration/: test_bootstrap_integration.py
epistemix_platform/tests/mappers/: test_batch_status_mapper.py  test_job_mapper.py  test_run_mapper.py
epistemix_platform/tests/models/: test_job.py  test_job_s3_prefix.py  test_job_upload.py  test_run.py  test_run_results.py  test_run_status_detail.py  test_upload_content.py  test_upload_location_sanitization.py
epistemix_platform/tests/repositories/: test_in_memory_job_repository.py  test_results_packager.py  test_s3_results_repository.py  test_s3_upload_location_repository.py  test_sqlalchemy_job_repository.py  test_sqlalchemy_run_repository.py
epistemix_platform/tests/routes/: test_app_routes.py
epistemix_platform/tests/services/: __init__.py  test_results_packager.py  test_s3_results_repository.py
epistemix_platform/tests/unit/: test_database_iam_auth.py
epistemix_platform/tests/use_cases/: test_archive_uploads.py  test_get_job_uploads.py  test_get_run_results.py  test_get_runs_by_job_id.py  test_read_upload_content.py  test_register_job.py  test_run_simulation.py  test_submit_job.py  test_submit_job_config.py  test_submit_run_config.py  test_submit_runs.py  test_upload_results.py  test_validate_tags.py  test_write_to_local.py
epistemix_platform/use_cases/: BUILD  archive_uploads.py  get_job_uploads.py  get_runs.py  list_jobs.py  read_upload_content.py  register_job.py  submit_job.py  submit_job_config.py  submit_run_config.py  submit_runs.py  write_to_local.py
simulation_runner/: .env.example  BUILD  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
simulation_runner/scripts/: run-simulation.sh
simulation_runner/src/simulation_runner/: BUILD  __init__.py  cli.py  config.py  exceptions.py  fred_config_builder.py  workflow.py
simulation_runner/tests/: __init__.py  conftest.py  test_date_converter.py  test_fred_config_builder.py  test_workflow_upload_results.py
simulation_runner/tests/integration/: __init__.py  test_bootstrap_integration.py
simulations/: BUILD  README.md  pyproject.toml  run_agent_info_job.py  run_influenza_job.py
simulations/agent_info_demo/: README.md  __init__.py  agent_info.fred  agent_info_job.py
simulations/influenza_demo/: Influenza.fred  influenza_job.py
simulations/tests/: __init__.py  pyproject.toml  test_fred_job_submission.py
simulations/tests/pacts/: test_epx_provider_pact_for_agent_info_job.py
tcr/: BUILD  CHANGELOG.md  README.md  __init__.py  cli.py  logging_config.py  pyproject.toml  tcr.py  tcr.yaml.example
tcr/tests/: BUILD  __init__.py  conftest.py  pyproject.toml  test_cli.py  test_list_sessions.py  test_setup_logger.py  test_stop_session.py  test_tcr_config.py  test_tcr_config_watch_paths.py  test_tcr_handler.py  test_tcr_ignore_patterns.py  test_tcr_runner.py
(+262 files in other folders)
