[tool.poetry]
name = "fred-simulations"
version = "0.1.0"
description = "FRED epidemiological modeling simulations"
authors = ["Zach Allen <j.zachary.allen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
numpy = "^1.24.0"
jupyter = "^1.0.0"
plotly = "^5.14.0"
epx = "*"
pact-python = "^2.0.0"
returns = "^0.25.0"
sqlalchemy = "^2.0.41"
pydantic = "^2.11.7"
boto3 = "^1.40.1"
flask = "^3.0.0"
flask-cors = "^4.0.0"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-xdist = "^3.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
freezegun = "^1.5.3"
awscli = "^1.42.1"
cfn-lint = "^1.38.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
