[tool.poetry]
name = "epistemix-platform"
version = "0.1.0"
description = "Epistemix Platform - Mock API server for Epistemix API"
authors = ["Zach Allen <j.zachary.allen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-cors = "^4.0.0"
werkzeug = "^3.0.1"
sqlalchemy = "^2.0.41"
pydantic = "^2.11.7"
boto3 = "^1.40.1"
botocore = "^1.40.1"
click = "^8.1.0"
requests = "^2.32.4"
python-dotenv = "^1.0.0"
returns = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"