[project]
name = "epistemix-platform-infrastructure"
version = "0.1.0"
description = "Infrastructure as code for the Epistemix platform"
authors = [
    {name = "Zach Allen",email = "j.zachary.allen@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = [
    "sceptre (>=4.5.3,<5.0.0)",
    "awscli (>=1.42.22,<2.0.0)",
    "cfn-lint (>=1.39.1,<2.0.0)",
    "pytest (>=7.0.0,<8.0.0)",
    "pytest-mock (>=3.10.0,<4.0.0)",
    "pytest-xdist (>=3.0.0,<4.0.0)",
    "boto3 (>=1.26.0,<2.0.0)",
    "botocore (>=1.29.0,<2.0.0)",
    "moto[all] (>=4.2.0,<5.0.0)",
    "jsonschema (>=3.2,<4.0.0)",
    "pyyaml (>=6.0,<7.0)",
    "requests (>=2.28.0,<3.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
cfn-flip = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
