[tool.poetry]
name = "epistemix-platform-infrastructure"
version = "0.1.0"
description = "Infrastructure as code for the Epistemix platform"
authors = ["Zach Allen <j.zachary.allen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
sceptre = ">=4.5.3,<5.0.0"
awscli = ">=1.42.22,<2.0.0"
cfn-lint = ">=1.39.1,<2.0.0"
boto3 = ">=1.26.0,<2.0.0"
botocore = ">=1.29.0,<2.0.0"
moto = {extras = ["all"], version = ">=4.2.0,<5.0.0"}
jsonschema = ">=3.2,<4.0.0"
requests = ">=2.28.0,<3.0.0"


[tool.poetry.group.dev.dependencies]
cfn-flip = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
