[tool.poetry]
name = "epistemix-platform-infrastructure"
version = "0.1.0"
description = "Infrastructure as code for the Epistemix platform"
authors = ["Zach Allen <j.zachary.allen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
sceptre = ">=4.5.3,<5.0.0"
# AWS CLI v2 installed separately as system package (not via pip/poetry)
cfn-lint = ">=1.39.1,<2.0.0"
boto3 = ">=1.26.0,<2.0.0"
botocore = ">=1.29.0,<2.0.0"
moto = {extras = ["all"], version = ">=4.2.0,<5.0.0"}
# jsonschema v4 not compatible with Sceptre 4.5.3 (requires <3.3)
jsonschema = ">=3.2,<3.3"
requests = ">=2.28.0,<3.0.0"
pytest = "^7.4.4"
pyyaml = "^6.0.3"
# Infrastructure testing tools
aws-cdk-lib = "^2.100.0"  # CDK assertions for flexible template testing
pytest-snapshot = "^0.9.0"  # Snapshot testing for stable templates
attrs = "<25.0.0"  # Pin to version compatible with cattrs (aws-cdk-lib dependency)
cattrs = "<25.0.0"  # Pin to version compatible with attrs <25


[tool.poetry.group.dev.dependencies]
cfn-flip = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
