[tool.poetry]
name = "epistemix-platform-tests"
version = "0.1.0"
description = "Test dependencies for Epistemix Platform"
authors = ["Epistemix Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
pytest-xdist = "^3.8.0"
freezegun = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"